infra/setup-application/ec2.tf
resource "aws_security_group" "allow_ssh" {
  name        = "allow-ssh"
  description = "Allow all ssh inbound traffic"
  vpc_id      = "${file("${path.module}/../../vpc-out.file")}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_security_group" "allow_http" {
  name        = "allow-http"
  description = "Allow all http inbound traffic"
  vpc_id      = "${file("${path.module}/../../vpc-out.file")}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

data "aws_ami" "helloawsnode_ami" {
  most_recent = true
  
  filter {
    name = "tag-value"
    values = ["*helloawsnode*"]
  }
}
resource "aws_launch_configuration" "as_conf" {
  name          = "helloawnode-launch-conf"
  image_id      = "${data.aws_ami.helloawsnode_ami.image_id}"
  instance_type = "t2.micro"
  security_groups = ["${aws_security_group.allow_ssh.id}","${aws_security_group.allow_http.id}"]
  associate_public_ip_address = true
}


resource "aws_autoscaling_group" "helloawsnode_asg" {
  name                     = "helloawsnode-asg"
  max_size                  = 6
  min_size                  = 2
  health_check_grace_period = 300
  health_check_type         = "ELB"
  desired_capacity          = 2
  force_delete              = true 
  launch_configuration      = "${aws_launch_configuration.as_conf.name}"
  load_balancers            = ["${aws_elb.helloawsnode_elb.id}"]
  vpc_zone_identifier       = ["${var.primary_subnet}", "${var.secondary_subnet}" ]
}

# TODO use alb instead for reusability when running multi ports
resource "aws_elb" "helloawsnode_elb" {
  name               = "helloawsnode-elb"
  subnets = ["${var.primary_subnet}", "${var.secondary_subnet}" ]
  security_groups = ["${aws_security_group.allow_http.id}"]
  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }


  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 3
    target              = "HTTP:80/health"
    interval            = 60
  }

  cross_zone_load_balancing   = true
  idle_timeout                = 400
  connection_draining         = true
  connection_draining_timeout = 400

  tags {
    Name = "helloawsnode-elb"
  }
}
